feat: Add complete Vendor/Supplier Management System - Database: 5 tables (vendors, vendor_products, vendor_claims, vendor_claim_items, vendor_payments) - Models: Vendor, VendorClaim, VendorClaimItem, VendorPayment - Repository: Full CRUD with claim submission, approval workflow, payment tracking - UI: 5 pages (vendors list, add vendor, vendor detail, claims management, product assignment) - Features: Commission calculation, claim approval/reject, payment recording, summary dashboard - Navigation: Added Vendors menu to drawer - Fixes: Drawer functionality and repository query type casting

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,14 @@ dependencies:
   cupertino_icons: ^1.0.6
   
   # Utilities
-  intl: ^0.19.0
+  intl: ^0.20.2
   shared_preferences: ^2.2.2
   
   # HTTP (for any remaining REST calls)
   http: ^1.2.0
+  
+  # Image handling
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
