--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "buildCommand": "echo 'Using pre-built files'",
+  "outputDirectory": "build/web",
+  "installCommand": "echo 'Skip install'",
   "rewrites": [
     {
       "source": "/(.*)",
