--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,19 @@
   "buildCommand": "echo 'Using pre-built files'",
   "outputDirectory": "build/web",
   "installCommand": "echo 'Skip install'",
+  "cleanUrls": true,
+  "trailingSlash": false,
   "headers": [
     {
       "source": "/(.*\\.js)",
       "headers": [
         {
           "key": "Content-Type",
-          "value": "application/javascript"
+          "value": "application/javascript; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     },
@@ -17,7 +23,7 @@
       "headers": [
         {
           "key": "Content-Type",
-          "value": "application/json"
+          "value": "application/json; charset=utf-8"
         }
       ]
     },
@@ -27,6 +33,10 @@
         {
           "key": "Content-Type",
           "value": "application/wasm"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     },
@@ -35,15 +45,39 @@
       "headers": [
         {
           "key": "Content-Type",
-          "value": "application/javascript"
+          "value": "application/javascript; charset=utf-8"
         }
       ]
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/((?!.*\\.(js|json|wasm|mjs|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|otf|frag|bin|map)).*)",
-      "destination": "/index.html"
+      "src": "/flutter_service_worker.js",
+      "dest": "/flutter_service_worker.js"
+    },
+    {
+      "src": "/main.dart.js",
+      "dest": "/main.dart.js"
+    },
+    {
+      "src": "/manifest.json",
+      "dest": "/manifest.json"
+    },
+    {
+      "src": "/canvaskit/(.*)",
+      "dest": "/canvaskit/$1"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/icons/(.*)",
+      "dest": "/icons/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
