--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   
   # URL Launcher (for WhatsApp share)
   url_launcher: ^6.2.5
+  share_plus: ^7.2.1
   
   # PDF Generation
   pdf: ^3.11.1
