--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: flutter pub get
 
       - name: Build Flutter web (JS, disable Wasm)
-        run: flutter build web --release --no-wasm
+        run: flutter build web --release --no-wasm-dry-run
 
       - name: Verify build output
         run: |
