Revert "Fix: Tooltip persistence, subscription guard, payment success refresh, and failed payment redirect"
This reverts commit df2f60345ff9c520bca3b38613b316d8e7091e32.

--- a/landing/vercel.json
+++ b/landing/vercel.json
@@ -5,6 +5,12 @@
   "devCommand": null,
   "installCommand": null,
   "framework": null,
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
   "headers": [
     {
       "source": "/:path*",
